# EllipseEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.history/: README_20240423221919.md  README_20240423221921.md  README_20240423221931.md  README_20240423221938.md  README_20240423221941.md  README_20240423221946.md  README_20240423221949.md  README_20240423221950.md  README_20240423222044.md  README_20240423222046.md  README_20240423222138.md  README_20240423222200.md  README_20240423222203.md  README_20240423222205.md  README_20240423222207.md  README_20240423222208.md  README_20240423222210.md  README_20240423222218.md  README_20240423222221.md  README_20240423222224.md  README_20240423222227.md  README_20240423222311.md  README_20240423222313.md  README_20240423222315.md  README_20240423222317.md  README_20240423222330.md  README_20240423222336.md  README_20240423222339.md  README_20240423222350.md  README_20240423222352.md  README_20240423222356.md  README_20240423222401.md  README_20240423222402.md  README_20240423222405.md  README_20240423222416.md  README_20240423222421.md  README_20240423222425.md  README_20240423222429.md  README_20240423222437.md  README_20240423222441.md  (+19 more)
assets/: placeholder.txt
shaders/: triangle_vert.vert
src/: Binary.cpp  Console.cpp  Console.hpp  Engine.cpp  Engine.hpp  IO.cpp  IO.hpp  Runner.cpp  VkCore.cpp  VkCore.hpp  Window.cpp  Window.hpp
src/Demo/: Main.c  Main.cpp
src/Editor/: Main.c
src/Engine/: Core.c  Core.h  Engine.c  Engine.cpp  Engine.h  Engine.hpp  Error.c  Error.h  Maths.c  Maths.h  TypeDefs.h
